fix the overflowing issue

--- a/frontend/src/fixer.css
+++ b/frontend/src/fixer.css
@@ -1,7 +1,11 @@
 * {
   padding: 0px;
   margin: 0px;
+  font-family: "Inconsolata", monospace;
+  text-wrap: wrap;
+  box-sizing: border-box;
 }
+
 .container {
   background-color: rgb(252, 242, 229);
   display: grid;
@@ -18,7 +22,34 @@
   border: 1px solid red;
 }
 
-/* .container > div {
-  border: 1px solid black;
-  box-sizing: border-box;
-} */
+.entry-container {
+  border: 1px solid red;
+  width: 50%;
+  position: relative;
+
+  padding: 10px;
+}
+
+.left {
+  left: 0;
+}
+
+.right {
+  left: 50%;
+}
+
+.entry-container.first {
+  margin-top: 0px;
+}
+
+.entry-container {
+  margin-top: -50px;
+}
+
+.entry {
+  background-color: rgb(254, 225, 254);
+  position: relative;
+  border: 1px solid rgb(51, 51, 51);
+  display: inline-block;
+  height: 1200px;
+}
